# CharlotteRemote

./: .gitignore  .gitmodules  CMakeLists.txt  partitions.csv  platformio.ini  sdkconfig  sdkconfig.defaults  sdkconfig.old  zaebali.ps1
main/: CMakeLists.txt  NVSController.h  aircraftData.h  config.cpp  config.h  constants.cpp  constants.h  data.cpp  data.h  geocentricCoordinates.h  geographicCoordinates.h  idf_component.yml  interpolator.h  lowPassFilter.h  main.cpp  rc.cpp  rc.h  runway.h  settings.h  sinAndCos.h  sound.h  spatialData.h  types.h  units.h  vector3.h
main/UI/: debugOverlay.cpp  debugOverlay.h  dialog.h  switcher.h  theme.cpp  theme.h  titler.h
main/audio/: sound.h
main/hardware/: NVS.h  OTA.cpp  OTA.h  TCP.h  TCPClient.h  WiFi.cpp  WiFi.h  analog.h  axis.cpp  axis.h  battery.h  encoder.cpp  encoder.h  slave.h  speaker.h
main/resources/: images.cpp  images.h  sounds.h
main/settings/: ADIRSSettings.h  PIDSettings.h  autopilotSettings.h  axesSettings.h  controlSettings.h  motorsSettings.h  navigationSettings.cpp  navigationSettings.h  personalizationSettings.h  settings.h  settingsAutopilot.h  settingsAxis.h  settingsControls.h  settingsInterface.h  settingsNavigation.cpp  settingsNavigation.h  settingsWiFi.h  transceiverSettings.h
main/types/: VSpeed.h  aircraftData.h  generic.h  lowPassFilter.h  navigationData.cpp  navigationData.h  remoteData.h  spatialData.h  speedBug.h  statistics.h  units.h
main/ui/: debugOverlay.cpp  debugOverlay.h  dialog.h  switcher.h  theme.cpp  theme.h  titler.h
main/utilities/: rendering.h  string.h
(+737 files in other folders)
